Fix title wrapping

--- a/jet/static/jet/css/_sidebar.scss
+++ b/jet/static/jet/css/_sidebar.scss
@@ -62,14 +62,16 @@
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
-        padding: 0 24px;
+        padding: 0 14px 0 24px;
+        width: 100%;
+        display: inline-block;
+        box-sizing: border-box;
         @include transition(color $transitions-duration);
 
         &-icon {
           float: right;
           font-size: 14px;
           font-weight: bold !important;
-          margin-right: 14px;
 
           &, &:visited, &:hover {
             color: $sidebar-title-action-color;
